--- a/index.html
+++ b/index.html
@@ -6,9 +6,164 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mac Book Pro</title>
+
+    <!-- tailwind css -->
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+
 </head>
 
 <body>
+
+    <main>
+        <section class="container mx-auto py-4">
+
+            <div class="grid md:grid-cols-2 gap-20">
+
+                <!-- mac-book image part -->
+                <div class="flex justify-end h-80 py-5 my-5 mx-2">
+                    <img src="images/mac.png" class="h-full" alt="">
+                </div>
+
+                <!--mac-book description part -->
+                <div class="py-5 mt-5 mx-2 max-w-md">
+
+                    <!-- description -->
+                    <div class="mb-10">
+                        <h2 class="text-3xl font-semibold  text-justify text-gray-800">
+                            Customize your Blue 24-inch iMac with Apple M1 chip.
+                        </h2>
+                        <p class="mt-4 text-justify">
+                            Apple M1 chip with 8-core CPU with 4 performance cores and 4 efficiency cores, 7-core GPU,
+                            and 16-core Neural Engine 8GB unified memory 256 GB SSD storage Two Thunderbolt/ USB 4 ports
+                            Magic Mouse Magic Keyboard - US English
+                        </p>
+                    </div>
+
+                    <!-- configuration & shipping info buttons -->
+
+                    <!-- Memory -->
+                    <p class="mb-10 font-semibold">
+
+                        Memory
+                        <br>
+                        <button
+                            class="my-2 mr-2 px-5 py-2 text-sm  border border-gray-400 shadow hover:shadow-xl hover:bg-blue-300  focus:ring-2 focus:ring-blue-500 rounded-md">
+                            BGB unified memory
+                        </button>
+
+                        <button
+                            class="my-2 mr-2 px-5 py-2 text-sm  border border-gray-400 shadow hover:shadow-xl hover:bg-blue-300  focus:ring-2 focus:ring-blue-500 rounded-md">
+                            16GB unified memory
+                        </button>
+
+                    </p>
+
+                    <!-- Storage -->
+                    <p class="mb-10 font-semibold">
+
+                        Storage
+                        <br>
+                        <button
+                            class="my-2 mr-2 px-5 py-2 text-sm border border-gray-400 shadow hover:shadow-xl hover:bg-blue-300  focus:ring-2 focus:ring-blue-500 rounded-md">
+                            256GB SSD storage
+                        </button>
+
+                        <button
+                            class="my-2 mr-2 px-5 py-2 text-sm border border-gray-400 shadow hover:shadow-xl hover:bg-blue-300  focus:ring-2 focus:ring-blue-500 rounded-md">
+                            512GB SSD storage
+                        </button>
+
+                        <button
+                            class="my-2 mr-2 px-5 py-2 text-sm border border-gray-400 shadow hover:shadow-xl hover:bg-blue-300  focus:ring-2 focus:ring-blue-500 rounded-md">
+                            1TB SSD storage
+                        </button>
+
+                    </p>
+
+                    <!-- Shipping -->
+                    <p class="mb-10 font-semibold">
+
+                        Choose your delivery option
+                        <br>
+                        <button
+                            class="my-2 mr-2 px-5 py-2 text-sm border border-gray-400 shadow hover:shadow-xl hover:bg-blue-300  focus:ring-2 focus:ring-blue-500 rounded-md">
+                            Friday, Aug 25 FREE Prime Delivery
+                        </button>
+
+                        <button
+                            class="my-2 mr-2 px-5 py-2 text-sm border border-gray-400 shadow hover:shadow-xl hover:bg-blue-300  focus:ring-2 focus:ring-blue-500 rounded-md">
+                            Friday, Aug 21 Delivery charge $20
+                        </button>
+
+                    </p>
+
+                    <!-- cost part & promo code-->
+                    <div class="grid grid-cols-2">
+
+                        <!-- best price -->
+                        <div class="py-1 font-semibold flex justify-between border-b-2 col-start-1">
+
+                            <div>Best Price</div>
+                            <div>$<span>1299</span></div>
+
+                        </div>
+
+                        <!-- extra memory cost -->
+                        <div class="py-1 font-semibold flex justify-between border-b-2 col-start-1">
+
+                            <div>Extra Memory Cost</div>
+                            <div>$<span>0</span></div>
+
+                        </div>
+
+                        <!-- extra storage cost -->
+                        <div class="py-1 font-semibold flex justify-between border-b-2 col-start-1">
+
+                            <div>Extra Storage Cost</div>
+                            <div>$<span>0</span></div>
+
+                        </div>
+
+                        <!-- delivery charge -->
+                        <div class="py-1 font-semibold flex justify-between border-b-4 border-gray-600 col-start-1">
+
+                            <div>Delivery Charge</div>
+                            <div>$<span>0</span></div>
+
+                        </div>
+
+                        <!-- total price -->
+                        <div class="py-1 font-semibold flex justify-between col-start-1">
+
+                            <div>Total Price</div>
+                            <div>$<span>1299</span></div>
+
+                        </div>
+
+                        <!-- promo code -->
+                        <div class="mt-4 col-start-1 col-span-3">
+                            Add Promo Code
+                            <br>
+                            <input class="border border-gray-300 p-1 rounded-md" type="text">
+                            <button
+                                class="my-2 mr-2 px-3 py-1.5 text-sm font-semibold text-white border border-red-500 bg-red-500 shadow hover:shadow-xl hover:bg-red-600  focus:ring-2 focus:ring-red-800 rounded-md">
+                                Apply
+                            </button>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+            <hr class="w-2/3 mx-auto mb-4 border-1 border-gray-400">
+            <p class="mb-10 text-3xl font-semibold text-justify text-gray-800" style="text-align: center;">
+                Total: $<span>1299</span>
+            </p>
+
+        </section>
+    </main>
 
     <script src="js/app.js"></script>
 </body>
